[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viasckde"
version = "0.1.6"
description = "VIASCKDE: internal cluster validity index (KDE-weighted compactness & separation)"
readme = "README.md"
authors = [
  { name = "Ali Şenol", email = "alisenol@tarsus.edu.tr" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
  "scikit-learn>=1.0",
  "scipy>=1.7"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/senolali/viasckde"  # Optional but recommended
