[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viasckde"
version = "1.0.0"
description = "VIASCKDE: internal cluster validity index (KDE-weighted compactness & separation)"
readme = "README.md"
authors = [
  { name = "Ali Şenol", email = "alisenol@tarsus.edu.tr" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
  "scikit-learn>=1.0",
  "scipy>=1.7"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Documentation = "https://github.com/senolali/viasckde" 
Homepage = "https://github.com/senolali/viasckde"  # Optional but recommended
Paper = "https://doi.org/10.1155/2022/4059302"
Issues = "https://github.com/senolali/viasckde"
